apply plugin: 'application'
mainClassName = 'com.d2fn.sumi.Sumi'
version = '0.1-SNAPSHOT'

apply plugin: 'java'
sourceCompatibility = 1.8

apply plugin: 'idea'

repositories {
    mavenCentral()
}

dependencies {
    compile 'com.flowpowered:flow-noise:1.0.0'
    compile 'com.github.spullara.cli-parser:cli-parser:1.1'
    compile 'org.freemarker:freemarker:2.3.23'
    compile 'org.processing:core:3.3.6'
    testCompile 'junit:junit:4.12'
}

jar {
    from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    manifest {
        attributes 'Built-By': System.getProperty('user.name'),
                   'Built-Date': new Date(),
                   'Built-JDK': System.getProperty('java.version'),
                   'Main-Class': mainClassName
    }
}

run {
    if(project.hasProperty('args')) {
        args findProperty('args').tokenize(" ")
    }
}

